Made up footer; Fixed horisontal scroll on mobile devices

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -19,13 +19,13 @@ html,
 body {
 	display: block; position: relative; width: 100vw; height: auto;
 	text-align: center; font-weight: 400; font-style: normal; text-transform: none; line-height: 1.3; letter-spacing: 0;
-	
+	overflow: hidden; 
 }
 html {font-size: 3.2vw;}
 body {
 	min-width: 320px;
 	font: normal normal 400 normal 1rem $default-font; color: $text_grey;
-	height: 100vh; overflow: hidden; overflow-y: auto;	
+	height: 100vh; overflow-y: auto;	
 }
 a, a:active, a:viseted, a:link, a:hover, a:-webkit-any-link {color: inherit; text-decoration: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
 a:-webkit-any-link {text-decoration: none !important; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);}
@@ -184,3 +184,4 @@ input.textarea::placeholder {color: $inactive;}
 
 @import "header";
 @import "section";
+@import "footer";
